kubernetes/manifests/next-cloud/next-cloud-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-app
  namespace: nextcloud-namespace
  labels:
    app: nextcloud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-app
  template:
    metadata:
      labels:
        app: nextcloud-app
    spec:
      containers:
      - name: nextcloud-app
        image: nextcloud:apache
        volumeMounts:
        - name: nextcloud-data
          mountPath: /var/www/html/data
        - name: nextcloud-config
          mountPath: /var/www/html
      volumes:
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: bigkev-storage-data-pvc
      - name: nextcloud-config
        persistentVolumeClaim:
          claimName: bigkev-storage-config-pvc
