kubernetes/manifests/next-cloud/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-headless-service
  namespace: nextcloud-namespace
spec:
  clusterIP: None
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: nextcloud-namespace
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - name: postgres
      port: 6379
      targetPort: 6379
